--- a/gatewayofindia.html
+++ b/gatewayofindia.html
@@ -1,13 +1,13 @@
-<! –– HTML CODING FOR VICTORIA MEMORIAL (victoriamemorial.html) ––>
+<! –– HTML CODING FOR GATEWAY OF INDIA (gatewayofindia.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
   <style>
     body {
-      background:transparent url('background-img/E.jpg') repeat center top;
+      background:transparent url('background-img/F.jpg') repeat center top;
     }
   </style>
-	<title>Victoria Memorial</title>
+	<title>Gateway of India</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Victoria Memorial
+		<div class="header-name" id="head-name">Gateway of India
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -36,12 +36,11 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="http://victoriamemorial-cal.org/home/content/en" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.gettyimages.in/photos/victoria-memorial?mediatype=photography&phrase=victoria%20memorial &sort=mostpopular" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Victoria_Memorial,_Kolkata" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Victoria_Memorial%2C_Kolkata" target="_blank">Detail Download</a></li>
-  			<li><a href="http://victoriamemorial-cal.org/uploads/E-Catalogue-List/E-Catalogue%20of%20Johan%20Zoffany.pdf" target="_blank">E-Catalogue</a></li>
-  			<li><a href="https://goo.gl/maps/rTgt4pwpkoJMbYc7A" target="_blank">360 Tour</a></li>
+  			<li><a href="https://mumbaicity.gov.in/tourist-place/gateway-of-india/" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/gateway-of-india?mediatype=photography&phrase=GATEWAY%20OF %20INDIA&sort=mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Gateway_of_India" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Gateway_of_India" target="_blank">Detail Download</a></li>
+  			<li><a href="https://goo.gl/maps/gzPqPLx3FKtBjTnLA" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -105,7 +104,7 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Victoria Memorial</div><br>The Victoria Memorial is a large marble building in Kolkata, West Bengal, India, which was built between 1906 and 1921. It is dedicated to the memory of Queen Victoria, then Empress of India, and is now a museum and tourist destination under the auspices of the Ministry of Culture.The memorial lies on the Maidan (grounds) by the bank of the Hooghly River, near Jawaharlal Nehru Road (better known as Chowringhee Road).<br>The Victoria Memorial's architect was William Emerson (1843–1924), president of the Royal Institute of British Architects.The design is in the Indo-Saracenic revivalist style which uses a mixture of British and Mughal elements with Venetian, Egyptian, Deccani and Islamic architectural influences.The building is 338 by 228 feet (103 by 69 m) and rises to a height of 184 feet (56 m). It is constructed of white Makrana marble.The gardens of the Victoria Memorial were designed by Lord Redesdale and David Prain. Emerson's assistant, Vincent Jerome Esch, designed the bridge of the north aspect and the garden gates. In 1902, Emerson engaged Esch to sketch his original design for the Victoria Memorial. After designing the temporary exhibition building for the Delhi Durbar of 1903, Curzon found Esch to be a suitable assistant for Emerson.
+	<div id="body-text"><div class="body-title">Gateway of India</div><br>The Gateway of India is a large marble building in Kolkata, West Bengal, India, which was built between 1906 and 1921. It is dedicated to the memory of Queen Victoria, then Empress of India, and is now a museum and tourist destination under the auspices of the Ministry of Culture.The memorial lies on the Maidan (grounds) by the bank of the Hooghly River, near Jawaharlal Nehru Road (better known as Chowringhee Road).<br>The Gateway of India's architect was William Emerson (1843–1924), president of the Royal Institute of British Architects.The design is in the Indo-Saracenic revivalist style which uses a mixture of British and Mughal elements with Venetian, Egyptian, Deccani and Islamic architectural influences.The building is 338 by 228 feet (103 by 69 m) and rises to a height of 184 feet (56 m). It is constructed of white Makrana marble.The gardens of the Gateway of India were designed by Lord Redesdale and David Prain. Emerson's assistant, Vincent Jerome Esch, designed the bridge of the north aspect and the garden gates. In 1902, Emerson engaged Esch to sketch his original design for the Gateway of India. After designing the temporary exhibition building for the Delhi Durbar of 1903, Curzon found Esch to be a suitable assistant for Emerson.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
@@ -123,7 +122,7 @@
           			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
          			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
          			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-        			<a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
+        			<a href="victoriamemorial.html" target="_blank">5.Gateway of India</a><br>
         			<a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
         			<a href="charminar.html" target="_blank">7.Charminar</a><br>
         			<a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
@@ -157,7 +156,7 @@
         		</section>
       		</div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Victoria Memorial|2020<br>
+      		<div class="text-center">&copy; Copyright Rohit Kumar|Gateway of India|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
       		</div>
     	</div>
