--- a/gatewayofindia.html
+++ b/gatewayofindia.html
@@ -65,17 +65,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="5.victoriamemorial/image1.jpg" style="width:100%">
+     		<img src="6.gatewayofindia/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="5.victoriamemorial/image2.jpg" style="width:100%">
+      		<img src="6.gatewayofindia/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="5.victoriamemorial/image3.jpg" style="width:100%">
+      		<img src="6.gatewayofindia/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -104,31 +104,33 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Gateway of India</div><br>The Gateway of India is a large marble building in Kolkata, West Bengal, India, which was built between 1906 and 1921. It is dedicated to the memory of Queen Victoria, then Empress of India, and is now a museum and tourist destination under the auspices of the Ministry of Culture.The memorial lies on the Maidan (grounds) by the bank of the Hooghly River, near Jawaharlal Nehru Road (better known as Chowringhee Road).<br>The Gateway of India's architect was William Emerson (1843–1924), president of the Royal Institute of British Architects.The design is in the Indo-Saracenic revivalist style which uses a mixture of British and Mughal elements with Venetian, Egyptian, Deccani and Islamic architectural influences.The building is 338 by 228 feet (103 by 69 m) and rises to a height of 184 feet (56 m). It is constructed of white Makrana marble.The gardens of the Gateway of India were designed by Lord Redesdale and David Prain. Emerson's assistant, Vincent Jerome Esch, designed the bridge of the north aspect and the garden gates. In 1902, Emerson engaged Esch to sketch his original design for the Gateway of India. After designing the temporary exhibition building for the Delhi Durbar of 1903, Curzon found Esch to be a suitable assistant for Emerson.
+	<div id="body-text"><div class="body-title">Gateway of India</div><br>The Gateway of India is an arch monument built during the 20th century in Bombay, India. The monument was erected to commemorate the landing of King George V and Queen Mary at Apollo Bunder on their visit to India in 1911.
+Built in Indo-Saracenic style, the foundation stone for the Gateway of India was laid on 31 March 1911. The structure is an arch made of basalt, 26 metres (85 feet) high. The final design of George Wittet was sanctioned in 1914 and the construction of the monument was completed in 1924. The Gateway was later used as a symbolic ceremonial entrance to India for Viceroys and the new Governors of Bombay.  It served to allow entry and access to India.<br>
+The Gateway of India is located on the waterfront at Apollo Bunder area at the end of Chhatrapati Shivaji Marg in South Mumbai and overlooks the Arabian Sea. The monument has also been referred to as the Taj Mahal of Mumbai, and is the city’s top tourist attraction.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/DyUpUXkGaJM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.9162937876185!2d88.34036911408167!3d22.544808185197155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02771346ae015d%3A0xb540e4bce39763!2sVictoria%20Memorial!5e0!3m2!1sen!2sin!4v1592037147447!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/4XSU39YXmWY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.2125432535267!2d72.83246561489884!3d18.921984087176394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7d1c73a0d5cad%3A0xc70a25a7209c733c!2sGateway%20Of%20India%20Mumbai!5e0!3m2!1sen!2sin!4v1592039245752!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
     	<div class="container">
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
-        		<section id="monuments-list" class="col-sm-4">
-          			<span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-          			<a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-          			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
-         			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-         			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-        			<a href="victoriamemorial.html" target="_blank">5.Gateway of India</a><br>
-        			<a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-        			<a href="charminar.html" target="_blank">7.Charminar</a><br>
-        			<a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-        			<a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-        			<a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
-        		</section>
+            <section id="monuments-list" class="col-sm-4">
+                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
+              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
+              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
+              <a href="charminar.html" target="_blank">7.Charminar</a><br>
+              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
+              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+            </section>
 <! –– IMPORTANT SITES ––>
         		<section id="important-sites" class="col-sm-4">
           			<span>Important Sites</span><br>
