--- a/charminar.html
+++ b/charminar.html
@@ -1,13 +1,13 @@
-<! –– HTML CODING FOR LOTUS TEMPLE (lotustemple.html) ––>
+<! –– HTML CODING FOR CHARMINAR (charminar.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
   <style>
     body {
-      background:transparent url('background-img/C.jpg') repeat center top;
+      background:transparent url('background-img/G.jpg') repeat center top;
     }
   </style>
-	<title>Lotus Temple</title>
+	<title>Charminar</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Lotus Temple
+		<div class="header-name" id="head-name">Charminar
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -36,13 +36,11 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="http://www.bahaihouseofworship.in/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.gettyimages.in/photos/lotus-temple-new-delhi?mediatype=photography&phrase=lotus%20temple %20new%20delhi&sort=mostpopular" target="_blank">Gallery</a></li>
-        <li><a href="http://www.bahaihouseofworship.in/virtual-tourr" target="_blank">Virtual Tour</a></li>
-        <li><a href="https://3dwarehouse.sketchup.com/model/udcc9f251-02a2-460f-b6b6-40feac0a4c9f/LOTUS-TEMPLE-NEW-DELHI" target="_blank">3D Maps</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Lotus_Temple" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Lotus_Temple" target="_blank">Detail Download</a></li>
-  			<li><a href="https://goo.gl/maps/fFEhT6SCnRAjFXHn8" target="_blank">360 Tour</a></li>
+  			<li><a href="https://www.hyderabadtourism.travel/charminar-hyderabad" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/charminar?mediatype=photography&phrase=CHARMINAR&sort=mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Charminar" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Charminar" target="_blank">Detail Download</a></li>
+  			<li><a href="https://goo.gl/maps/AXzZKgNZYNBJZrTA6" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -67,17 +65,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="3.lotustemple/image1.jpg" style="width:100%">
+     		<img src="7.charminar/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="3.lotustemple/image2.jpg" style="width:100%">
+      		<img src="7.charminar/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="3.lotustemple/image3.jpg" style="width:100%">
+      		<img src="7.charminar/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -106,12 +104,12 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Lotus Temple</div><br>The Lotus Temple (also known as Kamal Mandir)  in Delhi is a matchless architectural marvel and one of the prime tourist attractions of the National Capital. Shaped in the form of a spectacular lotus with white petals, it makes for a break-taking sight and attracts countless visitors throughout the year. Unlike most other places of worship, this temple or Bahai House of Worship does not allow ritualistic ceremonies and has no fixed pattern to conduct worship. A glorious symbol of oneness, this place of worship must be on your itinerary when planning a trip and booking your hotels in Delhi.<br>The Lotus Temple is a Bahai House of Worship, also known as Mashriqu’l-Adhkár, opened to the public in December 1986. Like all other Bahai temples, it is also dedicated to the oneness of religions and humanity. Followers of all religions are welcome to gather here to pray, worship, and read their scriptures. The Lotus Temple in Delhi is touted as one of the seven major Bahai Houses of Worship located across the world and the only one in Asia.
+	<div id="body-text"><div class="body-title">Charminar</div><br>Charminar does have four exquisitely carved pillars, one of each side. This impressive structure stands calmly amid the hustle bustle of Laad Bazaar of the Old city. Maintained by the Archeological Survey of India, Charminar is a representation of the historical background of the city, its glamour, glory and cultural richness. Since its construction in 1591 by Mohammed Quli Qutub Shah of Shah Dynasty, Charminar has been captivating every visitor, with its architectural beauty as well as religious and historical significance.<br>Charminar was built by Sultan Mohammed Quli Qutb Shah in the year 1951. It is said that this square shaped structure with four pillars and intricate carvings was built in honour of his wife, Bhagmati. However, the actual reason behind building Charminar is still not clear.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/ThrIh9OVKaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14017.910846015318!2d77.26033916352142!3d28.555414440728203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3c16e028cd1%3A0x653beb1ee85ec67a!2sLotus%20Temple!5e0!3m2!1sen!2sin!4v1591959872128!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe  src="https://www.youtube.com/embed/5Z_Y4iCB5ek" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3808.0450816155394!2d78.4746645!3d17.3615636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb978a6e1a939b%3A0xcb5a69e4aaf113fb!2sCharminar!5e0!3m2!1sen!2sin!4v1592039938333!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
@@ -142,7 +140,7 @@
           			<a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
           			<a href="#projrctreport" target="_blank">7.Project Report<br>
           			<a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
-                <hr class="visible-xs">
+          			<hr class="visible-xs">
         		</section>
 <! –– ABOUT US ––>
         		<section id="about" class="col-sm-4">
@@ -158,7 +156,7 @@
         		</section>
       		</div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Lotus Temple|2020<br>
+      		<div class="text-center">&copy; Copyright Rohit Kumar|Charminar|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
       		</div>
     	</div>
