--- a/mysoreplace.html
+++ b/mysoreplace.html
@@ -1,13 +1,13 @@
-<! –– HTML CODING FOR LOTUS TEMPLE (lotustemple.html) ––>
+<! –– HTML CODING FOR MYSORE PALACE (mysorepalace.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
   <style>
     body {
-      background:transparent url('background-img/C.jpg') repeat center top;
+      background:transparent url('background-img/I.jpg') repeat center top;
     }
   </style>
-	<title>Lotus Temple</title>
+	<title>Mysore Palace </title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Lotus Temple
+		<div class="header-name" id="head-name">Mysore Palace 
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -36,13 +36,11 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="http://www.bahaihouseofworship.in/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.gettyimages.in/photos/lotus-temple-new-delhi?mediatype=photography&phrase=lotus%20temple %20new%20delhi&sort=mostpopular" target="_blank">Gallery</a></li>
-        <li><a href="http://www.bahaihouseofworship.in/virtual-tourr" target="_blank">Virtual Tour</a></li>
-        <li><a href="https://3dwarehouse.sketchup.com/model/udcc9f251-02a2-460f-b6b6-40feac0a4c9f/LOTUS-TEMPLE-NEW-DELHI" target="_blank">3D Maps</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Lotus_Temple" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Lotus_Temple" target="_blank">Detail Download</a></li>
-  			<li><a href="https://goo.gl/maps/fFEhT6SCnRAjFXHn8" target="_blank">360 Tour</a></li>
+  			<li><a href="https://www.mysorepalace.gov.in/" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/mysore-palace?mediatype=photography&phrase=MYSORE%20PALACE&sort= mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Mysore_Palace" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Mysore_Palace" target="_blank">Detail Download</a></li>
+  			<li><a href="https://goo.gl/maps/u19oDdv6bc3D5wdL9" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -67,17 +65,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="3.lotustemple/image1.jpg" style="width:100%">
+     		<img src="9.mysorepalace/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="3.lotustemple/image2.jpg" style="width:100%">
+      		<img src="9.mysorepalace/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="3.lotustemple/image3.jpg" style="width:100%">
+      		<img src="9.mysorepalace/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -106,31 +104,32 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Lotus Temple</div><br>The Lotus Temple (also known as Kamal Mandir)  in Delhi is a matchless architectural marvel and one of the prime tourist attractions of the National Capital. Shaped in the form of a spectacular lotus with white petals, it makes for a break-taking sight and attracts countless visitors throughout the year. Unlike most other places of worship, this temple or Bahai House of Worship does not allow ritualistic ceremonies and has no fixed pattern to conduct worship. A glorious symbol of oneness, this place of worship must be on your itinerary when planning a trip and booking your hotels in Delhi.<br>The Lotus Temple is a Bahai House of Worship, also known as Mashriqu’l-Adhkár, opened to the public in December 1986. Like all other Bahai temples, it is also dedicated to the oneness of religions and humanity. Followers of all religions are welcome to gather here to pray, worship, and read their scriptures. The Lotus Temple in Delhi is touted as one of the seven major Bahai Houses of Worship located across the world and the only one in Asia.
+	<div id="body-text"><div class="body-title">Mysore Palace </div><br>Mysore Palace, also called Amba Vilas Palace, is one of the most magnificent and largest palaces in India. Situated in the southern state of Karnataka, it used to be the official residence of the Wodeyar Dynasty, the rulers of Mysore from 1399 to 1950. The grand palace stands tall in the heart of Mysore city and attracts visitors from across the world. Being one of the prime attractions in India after the Taj Mahal, it certainly deserves a place in every traveler’s bucket list.<br>
+  Of the seven palaces that dot the cityscape of Mysore, this royal edifice is the most splendid one. The palace had its foundation laid way back in the 14th century by the Wodeyars or Wadiyars, the royal family of Mysore. It is believed that Yaduraya Wodeyar, the first ruler of the Mysore Kingdom, built a palace in Puragiri aka the Old Fort during his reign. This palace, which is believed to be the predecessor of the current palace, has been demolished and reconstructed multiple times over a period of six centuries.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/ThrIh9OVKaU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14017.910846015318!2d77.26033916352142!3d28.555414440728203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3c16e028cd1%3A0x653beb1ee85ec67a!2sLotus%20Temple!5e0!3m2!1sen!2sin!4v1591959872128!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/sqtpLCP-stE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.1739495307497!2d76.6543858!3d12.3040698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf701103f9a1f9%3A0xc37fbae2a124da0d!2sMysore%20Palace!5e0!3m2!1sen!2sin!4v1592041110333!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
     	<div class="container">
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
-            <section id="monuments-list" class="col-sm-4">
-                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
-              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
-              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-              <a href="charminar.html" target="_blank">7.Charminar</a><br>
-              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
-            </section>
+        		<section id="monuments-list" class="col-sm-4">
+          			<span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+          			<a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+          			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
+         			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
+         			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
+        			<a href="victoriamemorial.html" target="_blank">5.Mysore Palace </a><br>
+        			<a href="gatewayofindia.html" target="_blank">6.Mysore Palace </a><br>
+        			<a href="Mysore Palace .html" target="_blank">7.Mysore Palace </a><br>
+        			<a href="hawamahal.html" target="_blank">8.Mysore Palace </a><br>
+        			<a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
+        			<a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+        		</section>
 <! –– IMPORTANT SITES ––>
         		<section id="important-sites" class="col-sm-4">
           			<span>Important Sites</span><br>
@@ -142,7 +141,7 @@
           			<a href="https://en.unesco.org/" target="_blank">6.UNESCO<br>
           			<a href="#projrctreport" target="_blank">7.Project Report<br>
           			<a href="https://www.webfreecounter.com/" target="_blank">Visitor No: <img src="https://www.webfreecounter.com/hit.php?id=guaoknq&nd=6&style=121" border="0" alt="free counter"></a>
-                <hr class="visible-xs">
+          			<hr class="visible-xs">
         		</section>
 <! –– ABOUT US ––>
         		<section id="about" class="col-sm-4">
@@ -158,7 +157,7 @@
         		</section>
       		</div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Lotus Temple|2020<br>
+      		<div class="text-center">&copy; Copyright Rohit Kumar|Mysore Palace|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
       		</div>
     	</div>
