--- a/victoriamemorial.html
+++ b/victoriamemorial.html
@@ -37,9 +37,9 @@
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
   			<li><a href="http://victoriamemorial-cal.org/home/content/en" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.gettyimages.in/photos/victoria-memorial?mediatype=photography&phrase=victoria%20memorial &sort=mostpopular" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Victoria_Memorial,_Kolkata" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Victoria_Memorial%2C_Kolkata" target="_blank">Detail Download</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/gateway-of-india?mediatype=photography&phrase=GATEWAY%20OF%20 INDIA&sort=mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Gateway_of_India" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Gateway_of_India" target="_blank">Detail Download</a></li>
   			<li><a href="http://victoriamemorial-cal.org/uploads/E-Catalogue-List/E-Catalogue%20of%20Johan%20Zoffany.pdf" target="_blank">E-Catalogue</a></li>
   			<li><a href="https://goo.gl/maps/rTgt4pwpkoJMbYc7A" target="_blank">360 Tour</a></li>
 		</ul>
@@ -117,19 +117,19 @@
     	<div class="container">
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
-        		<section id="monuments-list" class="col-sm-4">
-          			<span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-          			<a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-          			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
-         			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-         			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-        			<a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
-        			<a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
-        			<a href="charminar.html" target="_blank">7.Charminar</a><br>
-        			<a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-        			<a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-        			<a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
-        		</section>
+            <section id="monuments-list" class="col-sm-4">
+                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
+              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
+              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
+              <a href="charminar.html" target="_blank">7.Charminar</a><br>
+              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
+              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+            </section>
 <! –– IMPORTANT SITES ––>
         		<section id="important-sites" class="col-sm-4">
           			<span>Important Sites</span><br>
