--- a/cst.html
+++ b/cst.html
@@ -115,19 +115,19 @@
     	<div class="container">
       		<div class="row footer-text">
 <! –– MONUMENTS LIST ––>
-        		<section id="monuments-list" class="col-sm-4">
-          			<span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-          			<a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-          			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
-         			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
-         			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-        			<a href="victoriamemorial.html" target="_blank">5.Hawa Mahal</a><br>
-        			<a href="gatewayofindia.html" target="_blank">6.Hawa Mahal</a><br>
-        			<a href="Hawa Mahal.html" target="_blank">7.Hawa Mahal</a><br>
-        			<a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
-        			<a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
-        			<a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
-        		</section>
+            <section id="monuments-list" class="col-sm-4">
+                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
+              <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
+              <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
+              <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
+              <a href="gatewayofindia.html" target="_blank">6.Gateway of India</a><br>
+              <a href="charminar.html" target="_blank">7.Charminar</a><br>
+              <a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
+              <a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
+              <a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
+            </section>
 <! –– IMPORTANT SITES ––>
         		<section id="important-sites" class="col-sm-4">
           			<span>Important Sites</span><br>
