--- a/monuments.html
+++ b/monuments.html
@@ -66,19 +66,45 @@
 <! –– IMAGE SLIDESHOW ––>
 	<div class="slideshow-container">
     	<div class="mySlides fade">
-      		<div class="numbertext">1 / 3</div>
-     		<img src="/image1.jpg" style="width:100%">
-    		</div>
-
-    		<div class="mySlides fade">
-      		<div class="numbertext">2 / 3</div>
-      		<img src="/image2.jpg" style="width:100%">
-    		</div>
-    
-    		<div class="mySlides fade">
-      		<div class="numbertext">3 / 3</div>
-      		<img src="/image3.jpg" style="width:100%">
+      	<div class="numbertext">1 / 10</div>
+     		<img src="1.tajmahal/image1.jpg" style="width:100%">
     	</div>
+    	<div class="mySlides fade">
+      		<div class="numbertext">2 / 10</div>
+      		<img src="2.redfort/image1.jpg" style="width:100%">
+    	</div>
+    	<div class="mySlides fade">
+      		<div class="numbertext">3 / 10</div>
+      		<img src="3.lotustemple/image1.jpg" style="width:100%">
+    	</div>
+      <div class="mySlides fade">
+        <div class="numbertext">4 / 10</div>
+        <img src="4.qutubminar/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">5 / 10</div>
+          <img src="5.victoriamemorial/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">6 / 10</div>
+          <img src="6.gatewayofindia/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">7 / 10</div>
+          <img src="7.charminar/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">8 / 10</div>
+          <img src="8.hawamahal/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">9 / 10</div>
+          <img src="9.mysorepalace/image1.jpg" style="width:100%">
+      </div>
+      <div class="mySlides fade">
+          <div class="numbertext">10 / 10</div>
+          <img src="10.cst/image1.jpg" style="width:100%">
+      </div>
 	</div><br>
 	<div style="text-align:center">
  		<span class="dot"></span> 
