--- a/mysorepalace.html
+++ b/mysorepalace.html
@@ -1,13 +1,13 @@
-<! –– HTML CODING FOR HAWA MAHAL (hawamahal.html) ––>
+<! –– HTML CODING FOR MYSORE PALACE (mysorepalace.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
   <style>
     body {
-      background:transparent url('background-img/H.jpg') repeat center top;
+      background:transparent url('background-img/I.jpg') repeat center top;
     }
   </style>
-	<title>Hawa Mahal</title>
+	<title>Mysore Palace </title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 <! –– HEADER ––>
 	<div class="header">
 		<p class="header" id="head">
-		<div class="header-name" id="head-name">Hawa Mahal
+		<div class="header-name" id="head-name">Mysore Palace 
 		<div class="header-button">
     		<a class="active" href="monuments.html">Home</a>
     		<a class="active" href="#contact">Contact</a>
@@ -36,11 +36,11 @@
 	<div>
 		<ul class="links">
   			<li><a href="monuments.html" target="_blank">Home</a></li>
-  			<li><a href="https://www.hawa-mahal.com/" target="_blank">Official Site</a></li>
-  			<li><a href="https://www.gettyimages.in/photos/hawa-mahal?mediatype=photography&phrase=HAWA%20MAHAL&sort=mostpopular" target="_blank">Gallery</a></li>
- 	 		<li><a href="https://en.wikipedia.org/wiki/Hawa_Mahal" target="_blank">Wikipedia</a></li>
-  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Hawa_Mahal" target="_blank">Detail Download</a></li>
-  			<li><a href="https://goo.gl/maps/gtJmVB6TDnUcb1CY6" target="_blank">360 Tour</a></li>
+  			<li><a href="https://www.mysorepalace.gov.in/" target="_blank">Official Site</a></li>
+  			<li><a href="https://www.gettyimages.in/photos/mysore-palace?mediatype=photography&phrase=MYSORE%20PALACE&sort= mostpopular" target="_blank">Gallery</a></li>
+ 	 		<li><a href="https://en.wikipedia.org/wiki/Mysore_Palace" target="_blank">Wikipedia</a></li>
+  			<li><a href="https://en.wikipedia.org/api/rest_v1/page/pdf/Mysore_Palace" target="_blank">Detail Download</a></li>
+  			<li><a href="https://goo.gl/maps/u19oDdv6bc3D5wdL9" target="_blank">360 Tour</a></li>
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
@@ -65,17 +65,17 @@
 	<div class="slideshow-container">
     	<div class="mySlides fade">
       		<div class="numbertext">1 / 3</div>
-     		<img src="8.hawamahal/image1.jpg" style="width:100%">
+     		<img src="9.mysorepalace/image1.jpg" style="width:100%">
     		</div>
 
     		<div class="mySlides fade">
       		<div class="numbertext">2 / 3</div>
-      		<img src="8.hawamahal/image2.jpg" style="width:100%">
+      		<img src="9.mysorepalace/image2.jpg" style="width:100%">
     		</div>
     
     		<div class="mySlides fade">
       		<div class="numbertext">3 / 3</div>
-      		<img src="8.hawamahal/image3.jpg" style="width:100%">
+      		<img src="9.mysorepalace/image3.jpg" style="width:100%">
     	</div>
 	</div><br>
 	<div style="text-align:center">
@@ -104,13 +104,13 @@
 		}
 	</script>
 <! –– BODY ––>
-	<div id="body-text"><div class="body-title">Hawa Mahal</div><br>Situated at Badi Choupad, Pink City of Jaipur, Hawa Mahal was built in 1799. It has 953 windows on the outside walls. The honeycomb shaped and beautifully carved windows allow breeze to blow through the palace and makes it a perfect summer palace. It was built as an extension to the City Palace nearby. See below for more information about Hawa Mahal.<br>The five-stores palace was built in the form of Krishna’s crown because Sarai Pratap Singh was devoted to Krishna, the Hindu god.
-  The mahal has a total of 953 small casements each with small lattice worked pink window, balconies and arched roofs with hanging cornices. This allows cool breeze blow through the mahal and keep it cool and airy in summer. Despite the large number of windows, each of them are size of a peep hole such that the royal ladies were not to be seen by the public
+	<div id="body-text"><div class="body-title">Mysore Palace </div><br>Mysore Palace, also called Amba Vilas Palace, is one of the most magnificent and largest palaces in India. Situated in the southern state of Karnataka, it used to be the official residence of the Wodeyar Dynasty, the rulers of Mysore from 1399 to 1950. The grand palace stands tall in the heart of Mysore city and attracts visitors from across the world. Being one of the prime attractions in India after the Taj Mahal, it certainly deserves a place in every traveler’s bucket list.<br>
+  Of the seven palaces that dot the cityscape of Mysore, this royal edifice is the most splendid one. The palace had its foundation laid way back in the 14th century by the Wodeyars or Wadiyars, the royal family of Mysore. It is believed that Yaduraya Wodeyar, the first ruler of the Mysore Kingdom, built a palace in Puragiri aka the Old Fort during his reign. This palace, which is believed to be the predecessor of the current palace, has been demolished and reconstructed multiple times over a period of six centuries.
 	</div><hr width="100%">
 <! –– YOU TUBE & MAPS ––>
 	<ul class="reference container-fluid">
-		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/6j9rd9TlMW8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
-		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227670.76390619032!2d75.8267438!3d26.9239363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db14b1bd30ba5%3A0x860e5d531eccb20c!2sHawa%20Mahal!5e0!3m2!1sen!2sin!4v1592040459349!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div></li>
+		<li><div class="youtube col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.youtube.com/embed/sqtpLCP-stE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
+		<li><div class="maps col-xs-1 col-sm-1 col-md-3 col-lg-3"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.1739495307497!2d76.6543858!3d12.3040698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baf701103f9a1f9%3A0xc37fbae2a124da0d!2sMysore%20Palace!5e0!3m2!1sen!2sin!4v1592041110333!5m2!1sen!2sin" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></iframe></div></li>
 	</ul><hr width="100%">
 <! –– FOOTER ––>
 	<footer class="panel-footer ">
@@ -123,10 +123,10 @@
           			<a href="redfort.html" target="_blank">2.Red Fort</a><br>
          			<a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
          			<a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
-        			<a href="victoriamemorial.html" target="_blank">5.Hawa Mahal</a><br>
-        			<a href="gatewayofindia.html" target="_blank">6.Hawa Mahal</a><br>
-        			<a href="Hawa Mahal.html" target="_blank">7.Hawa Mahal</a><br>
-        			<a href="hawamahal.html" target="_blank">8.Hawa Mahal</a><br>
+        			<a href="victoriamemorial.html" target="_blank">5.Mysore Palace </a><br>
+        			<a href="gatewayofindia.html" target="_blank">6.Mysore Palace </a><br>
+        			<a href="Mysore Palace .html" target="_blank">7.Mysore Palace </a><br>
+        			<a href="hawamahal.html" target="_blank">8.Mysore Palace </a><br>
         			<a href="mysorepalace.html" target="_blank">9.Mysore Palace</a><br>
         			<a href="cst.html" target="_blank">10.CST</a><br><hr class="visible-xs">
         		</section>
@@ -157,7 +157,7 @@
         		</section>
       		</div>
 <! –– COPYRIGHT ––>
-      		<div class="text-center">&copy; Copyright Rohit Kumar|Hawa Mahal|2020<br>
+      		<div class="text-center">&copy; Copyright Rohit Kumar|Mysore Palace|2020<br>
       			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
       		</div>
     	</div>
