--- a/monuments - Copy.html
+++ b/monuments - Copy.html
@@ -1,4 +1,4 @@
-<! –– HTML CODING FOR MONUMENTS (monuments.html) ––>
+<! –– HTML CODING FOR TAJ Mahal (tajmahal.html) ––>
 <!doctype html>
 <html lang="en">
 <head>
@@ -64,7 +64,7 @@
       }
   </script>
 <! –– IMAGE SLIDESHOW ––>
-  <div class="slideshow-container">
+	<div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 10</div>
         <img src="1.tajmahal/image1.jpg" style="width:100%">
