--- a/monuments.html
+++ b/monuments.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
-
 </head>
 <body>
 <! –– HEADER ––>
@@ -132,17 +131,19 @@
     }
   </script>
 <! –– BODY ––>
-  <div id="body-text"><div class="body-title"></div></div><hr width="100%">
-
+  <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).</div><hr width="100%">
+  <div class="list-all" id="body-text"><div class="list-name">1.Taj Mahal:</div><div class="list-img"><img src="home-icon/1.jpg" width="100px" height="120px" style="position: absolute;float:right;"></div>The Taj Mahal is an ivory-white marble mausoleum on the southern bank of the river Yamuna in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favourite wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.
+  <a href="tajmahal.html" target="_blank">Read More.</a></div>
+  <hr width="100%">
 <! –– FOOTER ––>
   <footer class="panel-footer ">
       <div class="container">
           <div class="row footer-text">
 <! –– MONUMENTS LIST ––>
             <section id="monuments-list" class="col-sm-4">
-                <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
-                <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
-                <a href="redfort.html" target="_blank">2.Red Fort</a><br>
+              <span><a href="monuments.html" target="_blank">Home Page</a></span><br>
+              <a href="tajmahal.html" target="_blank">1.Taj Mahal</a><br>
+              <a href="redfort.html" target="_blank">2.Red Fort</a><br>
               <a href="lotustemple.html" target="_blank">3.Lotus Temple</a><br>
               <a href="qutubminar.html" target="_blank">4.Qutub Minar</a><br>
               <a href="victoriamemorial.html" target="_blank">5.Victoria Memorial</a><br>
