--- a/lotustemple.html
+++ b/lotustemple.html
@@ -46,7 +46,7 @@
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+	<button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
 	<script>
 		var mybutton = document.getElementById("myBtn");
 		window.onscroll = function() {scrollFunction()};
