--- a/monuments.html
+++ b/monuments.html
@@ -36,16 +36,10 @@
   <div>
     <ul class="links">
         <li><a href="monuments.html" target="_blank">Home</a></li>
-        <li><a href="" target="_blank">Official Site</a></li>
-        <li><a href="" target="_blank">Gallery</a></li>
-      <li><a href="" target="_blank">Wikipedia</a></li>
-        <li><a href="" target="_blank">Detail Download</a></li>
-        <li><a href="" target="_blank">Guide Maps</a></li>
-        <li><a href="" target="_blank">360 Tour</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <script>
     var mybutton = document.getElementById("myBtn");
     window.onscroll = function() {scrollFunction()};
@@ -131,9 +125,7 @@
     }
   </script>
 <! –– BODY ––>
-  <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).</div><hr width="100%">
-  <div class="list-all" id="body-text"><div class="list-name">1.Taj Mahal:</div><div class="list-img"><img src="home-icon/1.jpg" width="100px" height="120px" style="position: absolute;float:right;"></div>The Taj Mahal is an ivory-white marble mausoleum on the southern bank of the river Yamuna in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favourite wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.
-  <a href="tajmahal.html" target="_blank">Read More.</a></div>
+  <div id="body-text"><div class="body-title">Monuments of India</div>India is one of the most beautiful countries in the world and is best known for its colourful culture and fascinating heritage. Its grand monuments, like the Taj Mahal act as strong pillars of the rich and deep history that India possesses. From their splendid architecture to a strong legacy, the historical monuments of India speak volumes. Most of these Indian monuments were primarily built under the regime of Rajputana, Dravidian and Mughal emperors. The monuments of India are speaking stones of the glory of its rulers and the brilliance of artisans in ancient India. Due to the incredible beauty of India and the constant efforts of the government in maintaining the heritage sites, India tourism has flourished rapidly witnessing an increase in the number of travellers from all around the world. Some of the well-preserved monuments in the different parts of the country are Red Fort (North), Sun Temple Konark (East), Amer Fort (West) and Charminar (South).<br><br>Check Out the links for more details given below:</div>
   <hr width="100%">
 <! –– FOOTER ––>
   <footer class="panel-footer ">
@@ -180,7 +172,7 @@
             </section>
           </div>
 <! –– COPYRIGHT ––>
-          <div class="text-center">&copy; Copyright Rohit Kumar|Taj Mahal|2020<br>
+          <div class="text-center">&copy; Copyright Rohit Kumar|Monuments of India|2020<br>
             <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
           </div>
       </div>
