--- a/tajmahal.html
+++ b/tajmahal.html
@@ -45,7 +45,7 @@
 		</ul>
 	</div>
 <! –– TOP BUTTON ––>
-	<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+	<button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
 	<script>
 		var mybutton = document.getElementById("myBtn");
 		window.onscroll = function() {scrollFunction()};
