--- a/monuments.html
+++ b/monuments.html
@@ -35,7 +35,17 @@
 <! –– MENU BAR ––>
   <div>
     <ul class="links">
-        <li><a href="monuments.html" target="_blank">Home</a></li>
+        <li><a href="monuments.html" title="Monuments of India" target="_blank">Home</a></li>
+        <li><a href="tajmahal.html" title="Taj Mahal" target="_blank">1</a></li>
+        <li><a href="redfort.html" title="Red Fort" target="_blank">2</a></li>
+        <li><a href="lotustemple.html" title="Lotus Temple" target="_blank">3</a></li>
+        <li><a href="qutubminar.html" title="Qutub Minar" target="_blank">4</a></li>
+        <li><a href="victoriamemorial.html" title="Victoria Memorial" target="_blank">5</a></li>
+        <li><a href="gatewayofindia.html" title="Gateway of India" target="_blank">6</a></li>
+        <li><a href="charminar.html" title="Charminar" target="_blank">7</a></li>
+        <li><a href="hawamahal.html" title="Hawa Mahal" target="_blank">8</a></li>
+        <li><a href="mysorepalace.html" title="Mysore Palace" target="_blank">9</a></li>
+        <li><a href="cst.html" title="CST" target="_blank">10</a></li>
     </ul>
   </div>
 <! –– TOP BUTTON ––>
@@ -173,7 +183,7 @@
           </div>
 <! –– COPYRIGHT ––>
           <div class="text-center">&copy; Copyright Rohit Kumar|Monuments of India|2020<br>
-            <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
+            <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
           </div>
       </div>
   </footer>
