--- a/victoriamemorial.html
+++ b/victoriamemorial.html
@@ -158,7 +158,7 @@
       		</div>
 <! –– COPYRIGHT ––>
       		<div class="text-center">&copy; Copyright Rohit Kumar|Victoria Memorial|2020<br>
-      			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
+      			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
       		</div>
     	</div>
 	</footer>
