--- a/gatewayofindia.html
+++ b/gatewayofindia.html
@@ -159,7 +159,7 @@ The Gateway of India is located on the waterfront at Apollo Bunder area at the e
       		</div>
 <! –– COPYRIGHT ––>
       		<div class="text-center">&copy; Copyright Rohit Kumar|Gateway of India|2020<br>
-      			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
+      			<marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
       		</div>
     	</div>
 	</footer>
