--- a/redfort.html
+++ b/redfort.html
@@ -157,7 +157,7 @@
           </div>
 <! –– COPYRIGHT ––>
           <div class="text-center">&copy; Copyright Rohit Kumar|Red Fort|2020<br>
-            <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar</marquee>
+            <marquee behavior="scroll" direction="left">This Site is Developed and Hosted by Rohit Kumar&nbsp;&nbsp;&nbsp;&nbsp;Thanks for Visiting&nbsp;&nbsp;&nbsp;&nbsp;Visit Again</marquee>
           </div>
       </div>
   </footer>
